# eq-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  example.env  justfile
.github/workflows/: docker-build-publish.yml
blob-tool/: Cargo.toml  README.md
blob-tool/src/: main.rs
common/: Cargo.toml  build.rs
common/proto/: eqservice.proto
common/src/: error.rs  lib.rs  utils.rs
eqs-client/: Cargo.toml  README.md
monitoring/: README.md  TROUBLESHOOTING.md  docker-compose.yml  monitoring-tools.sh  prepare-config.sh  test-config.sh  test-dashboard.sh  test-grafana-queries.sh  verify-eq-service.sh
monitoring/alertmanager/: alertmanager.yml
monitoring/blackbox/: blackbox.yml
monitoring/grafana/dashboards/: dashboard-provider.yml  eq-service-dashboard.json
monitoring/grafana/datasources/: datasource.yml  datasource.yml.template
monitoring/prometheus/: alert_rules.yml  prometheus.yml  prometheus.yml.template
monitoring/receiver/: Dockerfile  app.py
program-keccak-inclusion/: Cargo.toml
program-keccak-inclusion/guest/: Cargo.toml  README.md
program-keccak-inclusion/guest/src/: main.rs
program-keccak-inclusion/src/: main.rs
runner-keccak-inclusion/: Cargo.toml  README.md  blob_data.json  proof_input3.json  sample_groth16_proof.json
runner-keccak-inclusion/src/: main.rs
sdk/: Cargo.toml
sdk/examples/: README.md  client.rs
sdk/src/: lib.rs  types.rs
service/: Cargo.toml
service/proto/: eqservice.proto
service/src/: main.rs
service/src/internal/: grpc.rs  inclusion.rs  job.rs  mod.rs  offer.rs  prom_metrics.rs  util.rs
