[workspace]
members = ["service", "program-keccak-inclusion", "common", "blob-tool", "runner-keccak-inclusion", "sdk"]
default-members = ["service"]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Nuke <nuke-web3@proton.me>", "c-node <chuckhead7@gmail.com>"]
license = "MIT"
homepage = "https://celestia.org"
repository = "https://github.com/celestiaorg/eq-service"

[workspace.dependencies]
eq-common = { path = "common", version = "0.1.6" }
eq-sdk = { path = "sdk", version = "0.1.6" }

celestia-types = "0.10"
celestia-rpc = "0.9"
nmt-rs = "0.2"
risc0-build = { version = "2.1.1" }
risc0-zkvm = { version = "2.0.2" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha3 = "0.10"
tendermint-proto = "0.40"
tendermint = "0.40"
bincode = "1.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
hex = "0.4"
serde_json = "1.0"
thiserror = "2.0"
sled = "0.34"
prost = "0.12.6"
tonic = { version = "0.11.0", default-features = false, features=["codegen"]}
tonic-build = { version = "0.11.0", default-features = false }
env_logger = "0.11"
log = "0.4"
base64 = "0.22"
jsonrpsee = "0.24"
