[workspace]
members = [
  "service",
  "program-keccak-inclusion",
  "common",
  "blob-tool",
  "runner-keccak-inclusion",
  "sdk",
]
default-members = ["service"]
resolver = "2"

[workspace.package]
version = "0.1.11"
edition = "2021"
authors = ["Nuke <nuke-web3@proton.me>", "c-node <connor@s1nus.com>"]
license = "MIT"
homepage = "https://celestia.org"
repository = "https://github.com/celestiaorg/eq-service"

[workspace.dependencies]
eq-common = { path = "common", version = "0.1.11" }
eq-sdk = { path = "sdk", version = "0.1.11" }
eq-program-keccak-inclusion-builder = { path = "program-keccak-inclusion" }

boundless-market = "0.13"
clap = "4.5"
celestia-types = "0.13"
celestia-rpc = "0.11"
nmt-rs = "0.2"
risc0-build = { version = "2.3.1" }
risc0-zkvm = { version = "2.3.1" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha3 = "0.10"
tendermint-proto = "0.40"
tendermint = "0.40"
bincode = "1.3"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal"] }
hex = "0.4"
serde_json = "1.0"
thiserror = "2.0"
sled = "0.34"
prost = "0.12.6"
tonic = { version = "0.11.0", default-features = false, features = ["codegen"] }
tonic-build = { version = "0.11.0", default-features = false }
env_logger = "0.11"
log = "0.4"
base64 = "0.22"
jsonrpsee = "0.25"
prometheus-client = "0.23"
hyper = "1.6"
hyper-util = "0.1"
http-body-util = "0.1"
