[package]
name = "blob-tool"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eq-common = {path = "../common"}
celestia-rpc = {workspace = true}
celestia-types = {workspace = true}
tokio = {workspace = true}
hex = {workspace = true}
base64 = {workspace = true}
serde_json = {workspace = true}
clap = { version = "4.5", features = ["derive"] }
sha3 = {workspace = true}
