[package]
name = "blob-tool"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
eq-common.workspace = true

celestia-rpc = { workspace = true }
celestia-types = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
sha3 = { workspace = true }
