[package]
name = "eq-common"
version = "0.1.0"
edition = "2021"

[dependencies]
celestia-types = {workspace = true}
nmt-rs = {workspace = true}
serde = {workspace = true}
tendermint = {workspace = true}
tendermint-proto = {workspace = true}
sha3 = {workspace = true}
thiserror = {workspace = true}
alloy = {workspace = true, features = ["sol-types"]}
prost = {workspace = true}
tonic = {workspace = true, features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = {workspace = true, features=["prost"] }
