[package]
name = "eq-common"
version = "0.1.0"
edition = "2021"

[dependencies]
celestia-types = {workspace = true}
nmt-rs = {workspace = true}
serde = {workspace = true}
tendermint-proto = {workspace = true, optional = true}
sha3 = {workspace = true}
thiserror = {workspace = true}
alloy = {workspace = true, features = ["sol-types"]}
prost = {workspace = true, optional = true}
tonic = {workspace = true, features = ["codegen", "prost"], optional = true}

[build-dependencies]
tonic-build = {workspace = true, features=["prost"], optional = true}

[features]
default = ["grpc", "utils"]

utils = ["tendermint-proto"]
grpc = ["tonic", "prost", "tonic-build"]
