[package]
name = "eq-common"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Celestia Equivalence Service shared types and traits"
documentation = "https://docs.rs/eq-common"

[dependencies]
celestia-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true, optional = true }
tonic = { workspace = true, features = ["codegen", "prost"], optional = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"], optional = true }

[features]
default = ["grpc", "host"]

grpc = ["tonic", "prost", "tonic-build"]
host = []
