[package]
name = "eq-program-keccak-inclusion"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
# TODO: use workspace version, cannot override default feats though... 
eq-common = { path = "../common", default-features = false }

sp1-zkvm = { workspace = true }
celestia-types = { workspace = true }
sha3 = { workspace = true }
