[package]
name = "runner-keccak-inclusion"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
risc0-zkvm.workspace = true
eq-common.workspace = true
serde_json.workspace = true
eq-program-keccak-inclusion-builder.workspace = true