[package]
name = "eq-sdk"
edition.workspace = true
version.workspace = true

[dependencies]
eq-common = {path = "../common"}
tonic = {workspace = true, features = ["transport"]}
serde = { workspace = true, features = ["derive"] }
celestia-types = {workspace = true}
base64 = {workspace = true}
tokio = {workspace = true}
log = {workspace = true}
