[package]
name = "eq-sdk"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Celestia Equivalence Service SDK to build clients and integrations to for a running instance of the service" 
documentation = "https://docs.rs/eq-sdk"
 
[dependencies]
eq-common = {path = "../common", version = "0.1.0"}
tonic = {workspace = true, features = ["transport"]}
serde = {workspace = true, features = ["derive"]}
celestia-types = {workspace = true}
base64 = {workspace = true}
tokio = {workspace = true}
log = {workspace = true}
