[package]
name = "eq-service"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
eq-program-keccak-inclusion = { path = "../program-keccak-inclusion", default-features = false }

eq-common = {workspace = true, features = ["host"]}
eq-sdk.workspace = true

serde = { workspace = true, features = ["derive"] }
bincode = {workspace = true}
celestia-types = {workspace = true}
celestia-rpc = {workspace = true}
tokio = {workspace = true}
tonic = {workspace = true, features = ["transport"]}
sled = {workspace = true}
risc0-zkvm = {workspace=true}
env_logger = {workspace=true}
log = {workspace=true}
hex = {workspace=true}
base64 = {workspace = true}
jsonrpsee = {workspace=true}
sha3 = {workspace=true}
bonsai-sdk = { version = "1.4.0", features = ["non_blocking"] }
bytemuck = "1.23.0"
