[package]
name = "eq-service"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
eq-common = { workspace = true, features = ["host"] }
eq-sdk.workspace = true

boundless-market = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
celestia-types = { workspace = true }
celestia-rpc = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
sled = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
sha3 = { workspace = true }
prometheus-client = { workspace = true }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
eq-program-keccak-inclusion-builder.workspace = true
